; ModuleID = '/home/carl/AnghaBench/curl/tests/server/extr_getpart.c_Curl_convert_clone.c'
source_filename = "/home/carl/AnghaBench/curl/tests/server/extr_getpart.c_Curl_convert_clone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { i32 }

@CURLE_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@CURLE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_convert_clone(%struct.Curl_easy* %0, i8* %1, i64 %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.Curl_easy*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i8*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8** %3, i8*** %9, align 8
  %11 = load %struct.Curl_easy*, %struct.Curl_easy** %6, align 8
  %12 = load i64, i64* %8, align 8
  %13 = call i8* @malloc(i64 %12)
  store i8* %13, i8** %10, align 8
  %14 = load i8*, i8** %10, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %18, label %16

16:                                               ; preds = %4
  %17 = load i32, i32* @CURLE_OUT_OF_MEMORY, align 4
  store i32 %17, i32* %5, align 4
  br label %26

18:                                               ; preds = %4
  %19 = load i8*, i8** %10, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = load i64, i64* %8, align 8
  %22 = call i32 @memcpy(i8* %19, i8* %20, i64 %21)
  %23 = load i8*, i8** %10, align 8
  %24 = load i8**, i8*** %9, align 8
  store i8* %23, i8** %24, align 8
  %25 = load i32, i32* @CURLE_OK, align 4
  store i32 %25, i32* %5, align 4
  br label %26

26:                                               ; preds = %18, %16
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
